--- a/sage.yaml
+++ b/sage.yaml
@@ -6,7 +6,7 @@ source:
     - "linux/amd64"
     - "linux/arm64"
     - "linux/arm/v7"
-  url: "https://github.com/waggle-sensor/plugin-numpy-example"
+  url: "https://https://github.com/andrewsm240/nexrad-from-S3"
 
   testing:
     command: [test.py]
